--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-python==3.8
-numpy
+fastapi
+uvicorn
 pandas
 scikit-learn
+joblib
+pydantic
 pytest
-requests
-fastapi==0.63.0
-uvicorn
-gunicorn
+httpx
